--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,38 @@
 buildscript {
+	ext {
+		springBootVersion = '1.5.2.RELEASE'
+	}
 	repositories {
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.5.21.RELEASE'
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
 
-plugins {
-	id 'java'
-}
-
+apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
-group = 'org.launchcode'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+jar {
+	baseName = 'liftoff-project'
+	version = '0.0.1-SNAPSHOT'
+}
+
+sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
 }
 
+
 dependencies {
-	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	compile 'org.springframework.boot:spring-boot-starter-web'
-	runtime 'org.springframework.boot:spring-boot-devtools'
-	testCompile 'org.springframework.boot:spring-boot-starter-test'
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('mysql:mysql-connector-java')
+	runtime('org.springframework.boot:spring-boot-devtools')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 bootRun {
